<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Taler Wallet</string>
    <string name="google_play_title" tools:keep="@string/google_play_title">Taler Wallet (experimental)</string>
    <string name="google_play_short_desc" tools:keep="@string/google_play_short_desc">GNU Taler makes privacy-friendly online transactions fast and easy.</string>
    <string name="google_play_full_desc" tools:keep="@string/google_play_full_desc"><![CDATA[
This app is a wallet for GNU Taler. It is highly experimental, and not ready for production use yet.

GNU Taler is a privacy-preserving payment system. Customers can stay anonymous, but merchants can not hide their income through payments with GNU Taler. This helps to avoid tax evasion and money laundering.

The primary use case of GNU Taler is payments; it is not meant as a store of value. Payments are always backed by an existing currency.

Payment are made after exchanging existing money into electronic money with the help of an Exchange service, that is, a payment service provider for Taler.

When making a payment, customers only need a charged wallet. A merchant can accept payments without making their customers register on the merchant\'s Website.

GNU Taler is immune against many types of fraud, such as phishing of credit card information or chargeback fraud. In case of loss or theft, only the limited amount of money left in the wallet might be gone.
]]></string>
    <string name="nav_header_title">GNU Taler</string>
    <string name="nav_header_subtitle">Wallet</string>
    <string name="nav_prompt_withdraw">Withdraw Digital Cash</string>
    <string name="nav_exchange_tos">Exchange\'s Terms of Service</string>
    <string name="nav_exchange_select">Select Exchange</string>
    <string name="nav_exchange_fees">Exchange Fees</string>
    <string name="nav_error">Error</string>
    <string name="button_back">Go Back</string>
    <string name="button_scan_qr_code">Scan Taler QR Code</string>
    <string name="button_scan_qr_code_label">Scan QR code</string>
    <string name="enter_uri">Enter Taler URI</string>
    <string name="copy" tools:override="true">Copy</string>
    <string name="copy_uri">Copy Taler URI</string>
    <string name="paste">Paste</string>
    <string name="paste_invalid">Clipboard contains an invalid data type</string>
    <string name="uri_invalid">Not a valid Taler URI</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="search">Search</string>
    <string name="menu">Menu</string>
    <string name="or">or</string>
    <string name="currency">Currency</string>
    <string name="char_count">%1$d/%2$d</string>
    <string name="import_db">Import</string>
    <string name="reset">Reset</string>
    <string name="share_payment">Share payment link</string>
    <string name="offline">Operation requires internet access. Please ensure your internet connection works and try again.</string>
    <string name="offline_banner">No internet access</string>
    <string name="error_unsupported_uri">Error: This Taler URI is not supported.</string>
    <string name="error_broken_uri">Error: This Taler URI is (currently) not working.</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_retry_pending_operations">Retry Pending Operations</string>
    <string name="host_apdu_service_desc">Taler NFC Payments</string>
    <string name="balances_title">Balances</string>
    <string name="amount_positive">+%s</string>
    <string name="amount_negative">-%s</string>
    <string name="amount_chosen">Chosen Amount</string>
    <string name="amount_sent">Amount sent</string>
    <string name="amount_received">Amount received</string>
    <string name="balances_inbound_label">inbound</string>
    <string name="balances_empty_state">There is no digital cash in your wallet.\n\nYou can get test money from the demo bank:\n\nhttps://bank.demo.taler.net</string>
    <string name="balance_scope_exchange">Exchange: %1$s</string>
    <string name="balance_scope_auditor">Auditor: %1$s</string>
    <string name="transactions_title">Transactions</string>
    <string name="transactions_balance">Balance</string>
    <string name="transactions_send_funds">Send\nFunds</string>
    <string name="transactions_send_funds_title">Send %1$s</string>
    <string name="transactions_receive_funds">Receive\nFunds</string>
    <string name="transactions_receive_funds_title">Receive %1$s</string>
    <string name="transactions_empty">You don\'t have any transactions</string>
    <string name="transactions_empty_search">No transactions found. Try a different search.</string>
    <string name="transactions_error">Could not load transactions\n\n%s</string>
    <string name="transactions_detail_title">Transaction</string>
    <string name="transactions_detail_title_currency">%s Transactions</string>
    <string name="transactions_delete">Delete</string>
    <string name="transactions_retry">Retry</string>
    <string name="transactions_abort">Abort</string>
    <string name="transactions_fail">Kill</string>
    <string name="transactions_suspend">Suspend</string>
    <string name="transactions_resume">Resume</string>
    <string name="transactions_select_all">Select All</string>
    <string name="transactions_delete_dialog_title">Delete Transaction</string>
    <string name="transactions_delete_dialog_message">Are you sure you want to remove this transaction from your wallet?</string>
    <string name="transactions_delete_selected_dialog_message">Are you sure you want to remove the selected transactions from your wallet?</string>
    <string name="transactions_abort_dialog_title">Abort Transaction</string>
    <string name="transactions_abort_dialog_message">Are you sure you want to abort this transaction? Funds still in transit might get lost.</string>
    <string name="transactions_fail_dialog_title">Kill Transaction</string>
    <string name="transactions_fail_dialog_message">Are you sure you want to kill this transaction? Funds still in transit WILL GET LOST.</string>
    <string name="transactions_cancel_dialog_message">Are you sure you want to cancel this withdrawal? Funds still in transit might get lost.</string>
    <string name="transaction_paid">Paid</string>
    <string name="transaction_order_total">Total</string>
    <string name="transaction_order">Purchase</string>
    <string name="transaction_order_id">Receipt #%1$s</string>
    <string name="transaction_refund">Refund</string>
    <string name="transaction_refund_from">Refund from %s</string>
    <string name="transaction_pending">PENDING</string>
    <string name="transaction_refresh">Coin expiry change fee</string>
    <string name="transaction_deposit">Deposit</string>
    <string name="transaction_peer_push_debit">Push payment</string>
    <string name="transaction_peer_pull_credit">Invoice</string>
    <string name="transaction_peer_pull_debit">Invoice paid</string>
    <string name="transaction_peer_push_credit">Push payment</string>
    <string name="transaction_action_kyc">Complete KYC</string>
    <string name="transaction_dummy_title">Unknown Transaction</string>
    <string name="payment_title">Payment</string>
    <string name="payment_prompt_title">Review Payment</string>
    <string name="payment_fee">+%s payment fee</string>
    <string name="payment_button_confirm">Confirm Payment</string>
    <string name="payment_label_amount_total">Total Amount:</string>
    <string name="payment_label_order_summary">Purchase</string>
    <string name="payment_error">Error: %s</string>
    <string name="payment_pending">Payment not completed, it will be retried</string>
    <string name="payment_balance_insufficient">Balance insufficient!</string>
    <string name="payment_aborted">Aborted</string>
    <string name="payment_failed">Failed</string>
    <string name="payment_initiated">Payment initiated</string>
    <string name="payment_already_paid_title">Already paid</string>
    <string name="payment_already_paid">You\'ve already paid for this purchase.</string>
    <string name="payment_pay_template_title">Customize your order</string>
    <string name="payment_create_order">Create order</string>
    <string name="payment_confirmation_code">Confirmation code</string>
    <string name="payment_template_error">Error creating order</string>
    <string name="receive_amount">Amount to receive</string>
    <string name="receive_amount_invalid">Amount invalid</string>
    <string name="receive_intro">Choose where to receive money from:</string>
    <string name="receive_withdraw">Withdraw from bank account</string>
    <string name="receive_peer">Invoice another wallet</string>
    <string name="receive_peer_title">Request payment</string>
    <string name="receive_peer_create_button">Create invoice</string>
    <string name="receive_peer_invoice_instruction">Let the payer scan this QR code to pay:</string>
    <string name="receive_peer_invoice_uri">Alternatively, copy and send this URI:</string>
    <string name="receive_peer_amount_invoiced">Amount invoiced</string>
    <string name="send_amount">Amount to send</string>
    <string name="send_intro">Choose where to send money to:</string>
    <string name="send_deposit">To a bank account</string>
    <string name="send_deposit_bitcoin">To a Bitcoin wallet</string>
    <string name="send_deposit_title">Deposit to a bank account</string>
    <string name="send_deposit_iban">IBAN</string>
    <string name="send_deposit_iban_error">IBAN is invalid</string>
    <string name="send_deposit_bic_error">BIC is invalid</string>
    <string name="send_deposit_bic">BIC/SWIFT</string>
    <string name="send_deposit_name">Account holder</string>
    <string name="send_deposit_bitcoin_address">Bitcoin address</string>
    <string name="send_deposit_check_fees_button">Check fees</string>
    <string name="send_deposit_amount_effective">Effective Amount</string>
    <string name="send_deposit_create_button">Make deposit</string>
    <string name="send_deposit_bitcoin_create_button">Transfer Bitcoin</string>
    <string name="send_peer">To another wallet</string>
    <string name="send_peer_bitcoin">To another Taler wallet</string>
    <string name="send_peer_title">Send money to another wallet</string>
    <string name="send_peer_create_button">Send funds now</string>
    <string name="send_peer_payment_instruction">Let the payee scan this QR code to receive:</string>
    <string name="send_peer_expiration_period">Expires in</string>
    <string name="send_peer_expiration_1d">1 day</string>
    <string name="send_peer_expiration_7d">7 days</string>
    <string name="send_peer_expiration_30d">30 days</string>
    <string name="send_peer_expiration_custom">Custom</string>
    <string name="send_peer_expiration_days">Days</string>
    <string name="send_peer_expiration_hours">Hours</string>
    <string name="send_peer_purpose">Purpose</string>
    <string name="withdraw_title">Withdrawal</string>
    <string name="withdraw_fees">Fee</string>
    <string name="withdraw_manual_title">Make a manual transfer to the exchange</string>
    <string name="withdraw_amount">How much to withdraw?</string>
    <string name="withdraw_manual_payment_options">Payment options supported by %1$s:\n\n%2$s</string>
    <string name="withdraw_manual_check_fees">Check fees</string>
    <string name="exchange_list_title">Exchanges</string>
    <string name="pending_operations_title">Pending Operations</string>
    <string name="settings_dev_mode">Developer Mode</string>
    <string name="settings_dev_mode_summary">Shows more information intended for debugging</string>
    <string name="settings_withdraw_testkudos">Withdraw TESTKUDOS</string>
    <string name="settings_withdraw_testkudos_summary">Get money for testing</string>
    <string name="settings_reset">Reset Wallet (dangerous!)</string>
    <string name="settings_reset_summary">Throws away your money</string>
</resources>