<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of GNU Taler
  ~ (C) 2020 Taler Systems S.A.
  ~
  ~ GNU Taler is free software; you can redistribute it and/or modify it under the
  ~ terms of the GNU General Public License as published by the Free Software
  ~ Foundation; either version 3, or (at your option) any later version.
  ~
  ~ GNU Taler is distributed in the hope that it will be useful, but WITHOUT ANY
  ~ WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR
  ~ A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with
  ~ GNU Taler; see the file COPYING.  If not, see <http://www.gnu.org/licenses/>
  -->

<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_main">

    <fragment
        android:id="@+id/nav_main"
        android:name="net.taler.wallet.MainFragment"
        android:label="@string/balances_title"
        tools:layout="@layout/fragment_balances">
        <action
            android:id="@+id/action_nav_main_to_promptPayment"
            app:destination="@id/promptPayment" />
        <action
            android:id="@+id/action_nav_main_to_nav_transactions"
            app:destination="@id/nav_transactions" />
        <action
            android:id="@+id/action_nav_main_to_nav_uri_input"
            app:destination="@id/nav_uri_input" />
    </fragment>

    <fragment
        android:id="@+id/promptPayment"
        android:name="net.taler.wallet.payment.PromptPaymentFragment"
        android:label="Review Payment"
        tools:layout="@layout/fragment_prompt_payment">
        <action
            android:id="@+id/action_promptPayment_to_nav_main"
            app:destination="@id/nav_main"
            app:popUpTo="@id/nav_main" />
        <action
            android:id="@+id/action_promptPayment_to_alreadyPaid"
            app:destination="@id/alreadyPaid"
            app:popUpTo="@id/nav_main" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="net.taler.wallet.settings.SettingsFragment"
        android:label="@string/menu_settings">
        <action
            android:id="@+id/action_nav_settings_to_nav_settings_exchanges"
            app:destination="@id/nav_settings_exchanges" />
        <action
            android:id="@+id/action_nav_settings_to_nav_settings_backup"
            app:destination="@id/nav_settings_backup" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings_exchanges"
        android:name="net.taler.wallet.exchanges.ExchangeListFragment"
        android:label="@string/exchange_list_title">
        <action
            android:id="@+id/action_nav_settings_exchanges_to_nav_exchange_manual_withdrawal"
            app:destination="@id/nav_exchange_manual_withdrawal" />
    </fragment>

    <fragment
        android:id="@+id/nav_exchange_manual_withdrawal"
        android:name="net.taler.wallet.withdraw.ManualWithdrawFragment"
        android:label="@string/withdraw_title"/>

    <fragment
        android:id="@+id/nav_settings_backup"
        android:name="net.taler.wallet.settings.BackupSettingsFragment"
        android:label="@string/nav_settings_backup"/>

    <fragment
        android:id="@+id/nav_transactions"
        android:name="net.taler.wallet.transactions.TransactionsFragment"
        android:label="@string/transactions_title"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/nav_transactions_detail_withdrawal"
        android:name="net.taler.wallet.transactions.TransactionWithdrawalFragment"
        android:label="@string/transactions_detail_title"
        tools:layout="@layout/fragment_transaction_withdrawal" />

    <fragment
        android:id="@+id/nav_transactions_detail_payment"
        android:name="net.taler.wallet.transactions.TransactionPaymentFragment"
        android:label="@string/transactions_detail_title"
        tools:layout="@layout/fragment_transaction_payment" />

    <fragment
        android:id="@+id/nav_transactions_detail_refund"
        android:name="net.taler.wallet.transactions.TransactionRefundFragment"
        android:label="@string/transactions_detail_title"
        tools:layout="@layout/fragment_transaction_payment" />

    <fragment
        android:id="@+id/nav_transactions_detail_refresh"
        android:name="net.taler.wallet.transactions.TransactionRefreshFragment"
        android:label="@string/transactions_detail_title"
        tools:layout="@layout/fragment_transaction_withdrawal" />

    <fragment
        android:id="@+id/alreadyPaid"
        android:name="net.taler.wallet.payment.AlreadyPaidFragment"
        android:label="@string/payment_already_paid_title"
        tools:layout="@layout/fragment_already_paid" />

    <fragment
        android:id="@+id/promptWithdraw"
        android:name="net.taler.wallet.withdraw.PromptWithdrawFragment"
        android:label="@string/nav_prompt_withdraw"
        tools:layout="@layout/fragment_prompt_withdraw">
        <action
            android:id="@+id/action_promptWithdraw_to_selectExchangeFragment"
            app:destination="@id/selectExchangeFragment" />
        <action
            android:id="@+id/action_promptWithdraw_to_reviewExchangeTOS"
            app:destination="@id/reviewExchangeTOS" />
        <action
            android:id="@+id/action_promptWithdraw_to_nav_main"
            app:destination="@id/nav_main"
            app:popUpTo="@id/nav_main" />
        <action
            android:id="@+id/action_promptWithdraw_to_errorFragment"
            app:destination="@id/errorFragment"
            app:popUpTo="@id/nav_main" />
    </fragment>

    <fragment
        android:id="@+id/reviewExchangeTOS"
        android:name="net.taler.wallet.withdraw.ReviewExchangeTosFragment"
        android:label="@string/nav_exchange_tos"
        tools:layout="@layout/fragment_review_exchange_tos">
        <action
            android:id="@+id/action_reviewExchangeTOS_to_promptWithdraw"
            app:destination="@id/promptWithdraw"
            app:popUpTo="@id/nav_main" />
    </fragment>
    <fragment
        android:id="@+id/selectExchangeFragment"
        android:name="net.taler.wallet.exchanges.SelectExchangeFragment"
        android:label="@string/nav_exchange_select"
        tools:layout="@layout/fragment_exchange_list" />

    <fragment
        android:id="@+id/nav_pending_operations"
        android:name="net.taler.wallet.pending.PendingOperationsFragment"
        android:label="@string/pending_operations_title"
        tools:layout="@layout/fragment_pending_operations" />

    <fragment
        android:id="@+id/nav_uri_input"
        android:name="net.taler.wallet.UriInputFragment"
        android:label="@string/enter_uri"
        tools:layout="@layout/fragment_uri_input" />

    <fragment
        android:id="@+id/errorFragment"
        android:name="net.taler.wallet.withdraw.ErrorFragment"
        android:label="@string/nav_error"
        tools:layout="@layout/fragment_error" />

    <action
        android:id="@+id/action_global_promptWithdraw"
        app:destination="@id/promptWithdraw" />

    <action
        android:id="@+id/action_global_promptPayment"
        app:destination="@id/promptPayment" />

    <action
        android:id="@+id/action_global_pending_operations"
        app:destination="@id/nav_pending_operations" />

    <action
        android:id="@+id/action_nav_transactions_detail_withdrawal"
        app:destination="@id/nav_transactions_detail_withdrawal" />

    <action
        android:id="@+id/action_nav_transactions_detail_payment"
        app:destination="@id/nav_transactions_detail_payment" />

    <action
        android:id="@+id/action_nav_transactions_detail_refund"
        app:destination="@id/nav_transactions_detail_refund" />

    <action
        android:id="@+id/action_nav_transactions_detail_refresh"
        app:destination="@id/nav_transactions_detail_refresh" />

</navigation>
